gn: Use .obj extension for pch objects on Windows.

Fixes a cosmetic regression from https://codereview.chromium.org/1292983004

BUG=603902

Review URL: https://codereview.chromium.org/1893933002

Cr-Commit-Position: refs/heads/master@{#387893}

Former-commit-id: c065bd83a55626de81db52aca9bf88dbb425e904